--- a/test/sameDomain.html
+++ b/test/sameDomain.html
@@ -12,7 +12,7 @@ console.log(window.location + ' listening ');
 
 var connection = new RESTChannel.Connection();
 
-connection.onAttach = function() {
+function onAttach() {
 
   console.log(window.location + ' attach');
   
@@ -23,7 +23,7 @@ connection.onAttach = function() {
     }
   );
   
-  this.putObject(
+  connection.putObject(
     'hello', 
     {message:'I am your parent'},
     function(reply) {
@@ -33,12 +33,10 @@ connection.onAttach = function() {
       console.error("Parent recvd err", err);
     }
   );
-};
+}
 
-  
-var onUnload = RESTChannel.listen(connection);
+var onUnload = RESTChannel.listen(connection, onAttach);
 window.addEventListener('unload', onUnload);
-
 
 window.addEventListener('load', function() {
   console.log(window.location.toString() + ' load ');
