API improvements and raw event listener API trial

--- a/test/parentFrame.html
+++ b/test/parentFrame.html
@@ -56,6 +56,7 @@ window.addEventListener('load', function() {
 </script>
 </head>
 <body>
-<iframe class='RESTChannelClient' src="sameDomainIframe.html"></iframe>
+<p>Open the debugging console to see the conversation logged</p>
+<iframe class='RESTChannelClient' src="childFrame.html"></iframe>
 </body>
 </html>
