--- a/test/parentFrame.html
+++ b/test/parentFrame.html
@@ -10,9 +10,8 @@
 
 console.log(window.location + ' listening ');
 
-var connection = new RESTChannel.Connection();
 
-function onAttach() {
+function onAttach(connection) {
 
   console.log(window.location + ' attach');
   
@@ -45,7 +44,7 @@ function onAttach() {
   );
 }
 
-var onUnload = RESTChannel.listen(connection, onAttach);
+var onUnload = RESTChannel.listen(window, onAttach);
 window.addEventListener('unload', onUnload);
 
 window.addEventListener('load', function() {
